feat: melhorar pesquisa de animes na dashboard
